# seatbelt

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  default-profile.sb  sb  test-syntax.sh  test.sh
configs/: clanker-itself.yaml  default.yaml  elixir.yaml  frontend.yaml  knauf.yaml
profiles/: base.sb  homebrew.sb  knauf.sb  no-docker.sb  project.sb
profiles/agents/: pi.sb
profiles/tools/: cargo.sb  docker.sb  gh.sb  git.sb  mix.sb  node.sb  nvim.sb  playwright-cli.sb  pup.sb  python.sb  ssh.sb
src/: allow_paths.rs  app.rs  cli.rs  config.rs  env_name.rs  main.rs  paths.rs  profile.rs  sandbox_exec.rs  shell_quote.rs  test_support.rs
